fix `collapse` nesting bug
fix: #1966

--- a/src/components/styled/collapse.css
+++ b/src/components/styled/collapse.css
@@ -22,7 +22,7 @@ details.collapse summary {
 .collapse:has(> input[type="radio"]:focus-visible) {
   @apply outline outline-2 outline-offset-2 outline-base-content;
 }
-.collapse-arrow .collapse-title:after {
+.collapse-arrow > .collapse-title:after {
   @apply absolute block h-2 w-2 transition-all ease-out rotate-[45deg] translate-y-[-100%];
   transition-duration: 0.2s;
   top: 50%;
@@ -32,10 +32,10 @@ details.collapse summary {
   box-shadow: 2px 2px;
   pointer-events: none;
 }
-[dir="rtl"] .collapse-arrow .collapse-title:after {
+[dir="rtl"] .collapse-arrow > .collapse-title:after {
   --tw-rotate: -45deg;
 }
-.collapse-plus .collapse-title:after {
+.collapse-plus > .collapse-title:after {
   @apply absolute block h-2 w-2 transition-all duration-300 ease-out;
   top: 0.9rem;
   right: 1.4rem;
@@ -43,12 +43,12 @@ details.collapse summary {
   pointer-events: none;
 }
 
-.collapse:not(.collapse-open):not(.collapse-close) input[type="checkbox"],
-.collapse:not(.collapse-open):not(.collapse-close) input[type="radio"]:not(:checked),
-.collapse:not(.collapse-open):not(.collapse-close) .collapse-title {
+.collapse:not(.collapse-open):not(.collapse-close) > input[type="checkbox"],
+.collapse:not(.collapse-open):not(.collapse-close) > input[type="radio"]:not(:checked),
+.collapse:not(.collapse-open):not(.collapse-close) > .collapse-title {
   @apply cursor-pointer;
 }
-.collapse:focus:not(.collapse-open):not(.collapse-close):not(.collapse[open]) .collapse-title {
+.collapse:focus:not(.collapse-open):not(.collapse-close):not(.collapse[open]) > .collapse-title {
   cursor: unset;
 }
 .collapse-title {
@@ -73,26 +73,26 @@ details.collapse summary {
     padding 0.2s ease-out,
     background-color 0.2s ease-out;
 }
-.collapse[open] :where(.collapse-content),
-.collapse-open :where(.collapse-content),
-.collapse:focus:not(.collapse-close) :where(.collapse-content),
-.collapse:not(.collapse-close) :where(input[type="checkbox"]:checked ~ .collapse-content),
-.collapse:not(.collapse-close) :where(input[type="radio"]:checked ~ .collapse-content) {
+.collapse[open] > :where(.collapse-content),
+.collapse-open > :where(.collapse-content),
+.collapse:focus:not(.collapse-close) > :where(.collapse-content),
+.collapse:not(.collapse-close) > :where(input[type="checkbox"]:checked ~ .collapse-content),
+.collapse:not(.collapse-close) > :where(input[type="radio"]:checked ~ .collapse-content) {
   @apply pb-4;
   transition:
     padding 0.2s ease-out,
     background-color 0.2s ease-out;
 }
 
-.collapse[open].collapse-arrow .collapse-title:after,
-.collapse-open.collapse-arrow .collapse-title:after,
-.collapse-arrow:focus:not(.collapse-close) .collapse-title:after,
-.collapse-arrow:not(.collapse-close) input[type="checkbox"]:checked ~ .collapse-title:after,
-.collapse-arrow:not(.collapse-close) input[type="radio"]:checked ~ .collapse-title:after {
+.collapse[open].collapse-arrow > .collapse-title:after,
+.collapse-open.collapse-arrow > .collapse-title:after,
+.collapse-arrow:focus:not(.collapse-close) > .collapse-title:after,
+.collapse-arrow:not(.collapse-close) > input[type="checkbox"]:checked ~ .collapse-title:after,
+.collapse-arrow:not(.collapse-close) > input[type="radio"]:checked ~ .collapse-title:after {
   @apply rotate-[225deg] translate-y-[-50%];
 }
-[dir="rtl"] .collapse[open].collapse-arrow .collapse-title:after,
-[dir="rtl"] .collapse-open.collapse-arrow .collapse-title:after,
+[dir="rtl"] .collapse[open].collapse-arrow > .collapse-title:after,
+[dir="rtl"] .collapse-open.collapse-arrow > .collapse-title:after,
 [dir="rtl"] .collapse-arrow:focus:not(.collapse-close) .collapse-title:after,
 [dir="rtl"]
   .collapse-arrow:not(.collapse-close)
@@ -100,10 +100,10 @@ details.collapse summary {
   ~ .collapse-title:after {
   --tw-rotate: 135deg;
 }
-.collapse[open].collapse-plus .collapse-title:after,
-.collapse-open.collapse-plus .collapse-title:after,
-.collapse-plus:focus:not(.collapse-close) .collapse-title:after,
-.collapse-plus:not(.collapse-close) input[type="checkbox"]:checked ~ .collapse-title:after,
-.collapse-plus:not(.collapse-close) input[type="radio"]:checked ~ .collapse-title:after {
+.collapse[open].collapse-plus > .collapse-title:after,
+.collapse-open.collapse-plus > .collapse-title:after,
+.collapse-plus:focus:not(.collapse-close) > .collapse-title:after,
+.collapse-plus:not(.collapse-close) > input[type="checkbox"]:checked ~ .collapse-title:after,
+.collapse-plus:not(.collapse-close) > input[type="radio"]:checked ~ .collapse-title:after {
   content: "−";
 }
